--- a/html/ui.html
+++ b/html/ui.html
@@ -54,10 +54,10 @@
 
 <script>
     $(document).ready(function () {
-        $("#use").html(invLocale.useItem);
-        $("#give").html(invLocale.giveItem);
-        $("#drop").html(invLocale.dropItem);
-        $("#noSecondInventoryMessage").html(invLocale.secondInventoryNotAvailable);
+        $("#use").html("Use");
+        $("#give").html("Give");
+        $("#drop").html("Drop");
+        $("#noSecondInventoryMessage").html("Second inventory is not available");
     });
 </script>
 
