feat: add search ability

--- a/html/ui.html
+++ b/html/ui.html
@@ -23,6 +23,7 @@
             <div id="playerInventory" data-type="main"></div>
             <div id="controls">
                 <div class="controls-div">
+                    <input type="text" class="control" id="search" placeholder="Type to search...">
                     <input type="number" class="control" id="count" value="1">
                     <div class="control" id="use"></div>
                     <div class="control" id="give"></div>
