feat(v1.7): add hotbar

--- a/html/ui.html
+++ b/html/ui.html
@@ -37,6 +37,8 @@
         </div>
     </div>
 
+    <div id="hotbar"></div>
+    
     <div id="dialog">
         <div id="nearPlayers"></div>
     </div>
