small html fixes

--- a/html/ui.html
+++ b/html/ui.html
@@ -27,9 +27,7 @@
                     <div class="control" id="give">Give</div>
                 </div>
             </div>
-            <div id="otherInventory" data-type="second">
-                <div id="noSecondInventoryMessage">Second inventory is not available</div>
-            </div>
+            <div id="otherInventory" data-type="second"></div>
             <div id="description"></div>
         </div>
     </div>
